<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uva_dark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/node" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/dosis"
        tools:text="@string/UserName"
        android:textColor="#00B1E9"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/user_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/dosis"
        tools:text="@string/UserNick"
        android:textColor="#00B1E9"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dosis"
        tools:text="@string/UserStatus"
        android:textColor="@color/tomate"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/user_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/dosis"
        android:gravity="center"
        tools:text="@string/UserDescription"
        android:textColor="#F5F5F5"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_repos"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/tomate"
        android:backgroundTint="@color/tomate"
        android:text="@string/sysButnRepo" />
</LinearLayout>